tests/test_trn_undef.expected
Error: Undefined variable 'undef' at line 2
  2 | lst [1,2,3] | trn *undef -> emt
                         ^
